--- a/module3/css/styles1.css
+++ b/module3/css/styles1.css
@@ -17,7 +17,7 @@ body{
 
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
-  color: red;
+  color: black;
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
@@ -65,7 +65,7 @@ padding-right: 20px;
 }  
 
 #nav1{
-	background-color: yellow;
+	background-color: skyblue;
 	border-radius: 0px;
 	border: 3px solid black;
 }
@@ -93,13 +93,13 @@ p{
 }
 
 #col1{
-	background-color: pink;
+	background-color: brown;
 }
 
 #col2{
-	background-color: skyblue;
+	background-color: yellow;
 }
 
 #col3{
-	background-color: lightgreen;
+	background-color: orange;
 }
